exports[`prefer-diagnostic > invalid(1): import test from 'node:test';\ntest('t', t => {\n\tconsole./* keep me */log('hi');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	console./* keep me */log('hi');
  4 | });

`;

exports[`prefer-diagnostic > invalid(1): import test from 'node:test';\ntest('t', t => {\n\tconsole./* keep me */log('hi');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	console./* keep me */log('hi');
    | 	^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

`;

exports[`prefer-diagnostic > invalid(10): import test from 'node:test';\ntest('t', t => {\n\t(console?.log as any)('value');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	(console?.log as any)('value');
  4 | });

`;

exports[`prefer-diagnostic > invalid(10): import test from 'node:test';\ntest('t', t => {\n\t(console?.log as any)('value');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	(console?.log as any)('value');
    | 	 ^^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	(t.diagnostic as any)('value');
  4 | });

`;

exports[`prefer-diagnostic > invalid(11): import test from 'node:test';\ntest('t', t => {\n\tconsole.log('value');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	console.log('value');
  4 | });

`;

exports[`prefer-diagnostic > invalid(11): import test from 'node:test';\ntest('t', t => {\n\tconsole.log('value');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	console.log('value');
    | 	^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	t.diagnostic('value');
  4 | });

`;

exports[`prefer-diagnostic > invalid(12): import test from 'node:test';\ntest('t', t => {\n\tconsole.log(message);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	console.log(message);
  4 | });

`;

exports[`prefer-diagnostic > invalid(12): import test from 'node:test';\ntest('t', t => {\n\tconsole.log(message);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	console.log(message);
    | 	^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	t.diagnostic(message);
  4 | });

`;

exports[`prefer-diagnostic > invalid(13): import test from 'node:test';\ntest('t', t => {\n\tconsole.log('value', value);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	console.log('value', value);
  4 | });

`;

exports[`prefer-diagnostic > invalid(13): import test from 'node:test';\ntest('t', t => {\n\tconsole.log('value', value);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	console.log('value', value);
    | 	^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

`;

exports[`prefer-diagnostic > invalid(14): import test from 'node:test';\ntest('t', t => {\n\tconsole.log();\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	console.log();
  4 | });

`;

exports[`prefer-diagnostic > invalid(14): import test from 'node:test';\ntest('t', t => {\n\tconsole.log();\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	console.log();
    | 	^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

`;

exports[`prefer-diagnostic > invalid(15): import test from 'node:test';\ntest('t', t => {\n\tconsole.log(...args);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	console.log(...args);
  4 | });

`;

exports[`prefer-diagnostic > invalid(15): import test from 'node:test';\ntest('t', t => {\n\tconsole.log(...args);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	console.log(...args);
    | 	^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

`;

exports[`prefer-diagnostic > invalid(16): import test from 'node:test';\ntest('t', t => {\n\tconsole.info('info');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	console.info('info');
  4 | });

`;

exports[`prefer-diagnostic > invalid(16): import test from 'node:test';\ntest('t', t => {\n\tconsole.info('info');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	console.info('info');
    | 	^^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.info()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	t.diagnostic('info');
  4 | });

`;

exports[`prefer-diagnostic > invalid(17): import test from 'node:test';\ntest('t', t => {\n\tconsole.debug('debug');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	console.debug('debug');
  4 | });

`;

exports[`prefer-diagnostic > invalid(17): import test from 'node:test';\ntest('t', t => {\n\tconsole.debug('debug');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	console.debug('debug');
    | 	^^^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.debug()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	t.diagnostic('debug');
  4 | });

`;

exports[`prefer-diagnostic > invalid(18): import test from 'node:test';\ntest('t', async t => { await t.test('s', s => { console.log('sub'); }); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', async t => { await t.test('s', s => { console.log('sub'); }); });

`;

exports[`prefer-diagnostic > invalid(18): import test from 'node:test';\ntest('t', async t => { await t.test('s', s => { console.log('sub'); }); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('t', async t => { await t.test('s', s => { console.log('sub'); }); });
    |                                                 ^^^^^^^^^^^ Prefer \`s.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.

Suggestion 1/1: Replace with \`s.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('t', async t => { await t.test('s', s => { s.diagnostic('sub'); }); });

`;

exports[`prefer-diagnostic > invalid(19): import * as nodeTest from 'node:test';\nnodeTest.test('t', t => { console.log('value'); }); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.test('t', t => { console.log('value'); });

`;

exports[`prefer-diagnostic > invalid(19): import * as nodeTest from 'node:test';\nnodeTest.test('t', t => { console.log('value'); }); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
> 2 | nodeTest.test('t', t => { console.log('value'); });
    |                           ^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.test('t', t => { t.diagnostic('value'); });

`;

exports[`prefer-diagnostic > invalid(2): import test from 'node:test';\ntest('t', t => {\n\tconsole/* keep me */.log('hi');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	console/* keep me */.log('hi');
  4 | });

`;

exports[`prefer-diagnostic > invalid(2): import test from 'node:test';\ntest('t', t => {\n\tconsole/* keep me */.log('hi');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	console/* keep me */.log('hi');
    | 	^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

`;

exports[`prefer-diagnostic > invalid(20): import test from 'node:test';\ntest('t', t => {\n\t(console as Console).log('x');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	(console as Console).log('x');
  4 | });

`;

exports[`prefer-diagnostic > invalid(20): import test from 'node:test';\ntest('t', t => {\n\t(console as Console).log('x');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	(console as Console).log('x');
    | 	^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	t.diagnostic('x');
  4 | });

`;

exports[`prefer-diagnostic > invalid(21): import test from 'node:test';\ntest('t', t => {\n\tconsole!.log('x');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	console!.log('x');
  4 | });

`;

exports[`prefer-diagnostic > invalid(21): import test from 'node:test';\ntest('t', t => {\n\tconsole!.log('x');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	console!.log('x');
    | 	^^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	t.diagnostic('x');
  4 | });

`;

exports[`prefer-diagnostic > invalid(22): import {test, getTestContext} from 'node:test';\ntest('t', () => { console.log('x'); }); 1`] = `

  1 | import {test, getTestContext} from 'node:test';
  2 | test('t', () => { console.log('x'); });

`;

exports[`prefer-diagnostic > invalid(22): import {test, getTestContext} from 'node:test';\ntest('t', () => { console.log('x'); }); 2`] = `

Message:
  1 | import {test, getTestContext} from 'node:test';
> 2 | test('t', () => { console.log('x'); });
    |                   ^^^^^^^^^^^ Prefer \`getTestContext().diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.

Suggestion 1/1: Replace with \`getTestContext().diagnostic()\`.:
  1 | import {test, getTestContext} from 'node:test';
  2 | test('t', () => { getTestContext().diagnostic('x'); });

`;

exports[`prefer-diagnostic > invalid(23): import {test, getTestContext} from 'node:test';\ntest('t', t => { console.log('x'); }); 1`] = `

  1 | import {test, getTestContext} from 'node:test';
  2 | test('t', t => { console.log('x'); });

`;

exports[`prefer-diagnostic > invalid(23): import {test, getTestContext} from 'node:test';\ntest('t', t => { console.log('x'); }); 2`] = `

Message:
  1 | import {test, getTestContext} from 'node:test';
> 2 | test('t', t => { console.log('x'); });
    |                  ^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import {test, getTestContext} from 'node:test';
  2 | test('t', t => { t.diagnostic('x'); });

`;

exports[`prefer-diagnostic > invalid(24): import {test, getTestContext as gtc} from 'node:test';\ntest('a', () => { console.log('x'); }); 1`] = `

  1 | import {test, getTestContext as gtc} from 'node:test';
  2 | test('a', () => { console.log('x'); });

`;

exports[`prefer-diagnostic > invalid(24): import {test, getTestContext as gtc} from 'node:test';\ntest('a', () => { console.log('x'); }); 2`] = `

Message:
  1 | import {test, getTestContext as gtc} from 'node:test';
> 2 | test('a', () => { console.log('x'); });
    |                   ^^^^^^^^^^^ Prefer \`gtc().diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.

Suggestion 1/1: Replace with \`gtc().diagnostic()\`.:
  1 | import {test, getTestContext as gtc} from 'node:test';
  2 | test('a', () => { gtc().diagnostic('x'); });

`;

exports[`prefer-diagnostic > invalid(3): import test from 'node:test';\ntest('t', t => {\n\tconsole?.log('value');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	console?.log('value');
  4 | });

`;

exports[`prefer-diagnostic > invalid(3): import test from 'node:test';\ntest('t', t => {\n\tconsole?.log('value');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	console?.log('value');
    | 	^^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	t.diagnostic('value');
  4 | });

`;

exports[`prefer-diagnostic > invalid(4): import test from 'node:test';\ntest('t', t => {\n\t(console.log)('value');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	(console.log)('value');
  4 | });

`;

exports[`prefer-diagnostic > invalid(4): import test from 'node:test';\ntest('t', t => {\n\t(console.log)('value');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	(console.log)('value');
    | 	 ^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	(t.diagnostic)('value');
  4 | });

`;

exports[`prefer-diagnostic > invalid(5): import test from 'node:test';\ntest('t', t => {\n\t(console?.log)('value');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	(console?.log)('value');
  4 | });

`;

exports[`prefer-diagnostic > invalid(5): import test from 'node:test';\ntest('t', t => {\n\t(console?.log)('value');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	(console?.log)('value');
    | 	 ^^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	(t.diagnostic)('value');
  4 | });

`;

exports[`prefer-diagnostic > invalid(6): import test from 'node:test';\ntest('t', t => {\n\t(console?.log)?.('value');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	(console?.log)?.('value');
  4 | });

`;

exports[`prefer-diagnostic > invalid(6): import test from 'node:test';\ntest('t', t => {\n\t(console?.log)?.('value');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	(console?.log)?.('value');
    | 	 ^^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	(t.diagnostic)?.('value');
  4 | });

`;

exports[`prefer-diagnostic > invalid(7): import test from 'node:test';\ntest('t', t => {\n\t((console?.log))('value');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	((console?.log))('value');
  4 | });

`;

exports[`prefer-diagnostic > invalid(7): import test from 'node:test';\ntest('t', t => {\n\t((console?.log))('value');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	((console?.log))('value');
    | 	  ^^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	((t.diagnostic))('value');
  4 | });

`;

exports[`prefer-diagnostic > invalid(8): import test from 'node:test';\ntest('t', t => {\n\t(console.log as any)('value');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	(console.log as any)('value');
  4 | });

`;

exports[`prefer-diagnostic > invalid(8): import test from 'node:test';\ntest('t', t => {\n\t(console.log as any)('value');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	(console.log as any)('value');
    | 	 ^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	(t.diagnostic as any)('value');
  4 | });

`;

exports[`prefer-diagnostic > invalid(9): import test from 'node:test';\ntest('t', t => {\n\t(console as any).log('value');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	(console as any).log('value');
  4 | });

`;

exports[`prefer-diagnostic > invalid(9): import test from 'node:test';\ntest('t', t => {\n\t(console as any).log('value');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	(console as any).log('value');
    | 	^^^^^^^^^^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	t.diagnostic('value');
  4 | });

`;
